Fix UpdateMarket message to only include updated data